--- a/CSS/mobile css/mobileMenu.css
+++ b/CSS/mobile css/mobileMenu.css
@@ -35,7 +35,7 @@ input#menuChecker:checked~.menuContent {
     color: whitesmoke;
 }
 
-a {
+.menuLink {
     text-decoration: none;
     color: white;
 }
