--- a/CSS/mobile css/indexMobile.css
+++ b/CSS/mobile css/indexMobile.css
@@ -5,3 +5,33 @@ header {
     padding: 0;
     font-family: 'Inria Serif', serif;
 }
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+}
+#mainHeader{
+    margin: 100px 0px 0px 0px;
+    text-align: center;
+}
+#mainHeader h1{
+    margin: 20px 20px 20px 20px;
+    font-size: 3em;
+}
+#mainHeader h2{
+    margin: 20px 20px 20px 20px;
+    font-size: 2em;
+}
+
+#buttonStart{
+    margin: 90px;
+}
+a{
+    padding: 50px;
+    text-align: center;
+    background-color: orange;
+    width: 150px;
+    height: 50px;
+    text-decoration: none;
+}
